# vk-pipe-demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
engine/: imgui_layer.cpp
engine/graphics/: device.cpp  engine.cpp  swap_chain.cpp
include/vkp/: imgui_layer.h  logger.h  window.h
include/vkp/graphics/: device.h  engine.h  pipeline.h  renderer.h  swap_chain.h
include/vkp/gui/: imgui_layer.h
shaders/: CMakeLists.txt  compile_shaders.bat  compile_shaders.sh  sb_shader.frag
shaders/2D/tri-move/: tri_move_shader.frag  tri_move_shader.frag.spv  tri_move_shader.vert  tri_move_shader.vert.spv
shaders/2D/tri-push/: tri_color_shader.frag  tri_color_shader.frag.spv  tri_move_shader.vert  tri_move_shader.vert.spv
shaders/3D/cube-grid-1/: cg1_shader.frag  cg1_shader.frag.spv  cg1_shader.vert  cg1_shader.vert.spv
shaders/3D/cube-grid-2/: cg2_shader.frag  cg2_shader.frag.spv  cg2_shader.vert  cg2_shader.vert.spv
shaders/3D/plate-trick/: plate-trick_shader.frag.spv  plate-trick_shader.vert  plate-trick_shader.vert.spv
shaders/3D/swirl/: swirl_shader.frag  swirl_shader.frag.spv  swirl_shader.vert  swirl_shader.vert.spv
src/: CmakeLists.txt  main.cpp  window.cpp
src/graphics/: device.cpp  engine.cpp  pipeline.cpp  renderer.cpp  swap_chain.cpp
src/gui/: imgui_layer.cpp  window.cpp
